--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ multitasking==0.0.11
 numpy==2.3.1
 packaging==25.0
 pandas==2.3.0
+patsy==1.0.1
 peewee==3.18.1
 platformdirs==4.3.8
 protobuf==6.31.1
@@ -24,8 +25,10 @@ pycparser==2.22
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.4
+scipy==1.16.0
 six==1.17.0
 soupsieve==2.7
+statsmodels==0.14.4
 typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
